# LaPy

./: .codecov.yml  .codespellignore  .flake8  .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  questions-help-support.md
.github/workflows/: build.yml  code-style.yml  doc.yml  publish.yml  pytest.yml
data/: cube.vtk  cubeTetra.ev  cubeTetra.vtk  cubeTria.ev  cubeTria.vtk  icosahedron.off  square-mesh.off  torus.off
dev/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
dev/.doctrees/: index.doctree  sg_execution_times.doctree
dev/.doctrees/api/: index.doctree  lapy.meshes.doctree  lapy.modules.doctree  lapy.solver.doctree  logging.doctree
dev/.doctrees/changes/: index.doctree  latest.doctree
dev/.doctrees/nbsphinx/tutorials/examples/: Test_Plot.ipynb  Test_ShapeDNA.ipynb  Test_TetMesh.ipynb  Test_TriaMesh.ipynb  Test_TriaMesh_Geodesics.ipynb
dev/.doctrees/tutorials/: index.doctree
dev/.doctrees/tutorials/examples/: Test_Plot.doctree  Test_ShapeDNA.doctree  Test_TetMesh.doctree  Test_TetMesh_Geodesics.doctree  Test_TriaMesh.doctree  Test_TriaMesh_Geodesics.doctree
dev/_downloads/1ecaf32698a15da6a6bf0a54b3c5fd6b/: 00_logging.ipynb
dev/_downloads/971f2c33db2baef5789dafc0c9ad4769/: 00_logging.py
dev/_sources/: index.rst.txt
dev/_sources/api/: index.rst.txt  lapy.meshes.rst.txt  lapy.modules.rst.txt  logging.rst.txt
dev/_sources/changes/: index.rst.txt  latest.rst.txt
dev/_sources/tutorials/: index.rst.txt
dev/_sources/tutorials/examples/: Test_Plot.ipynb.txt  Test_ShapeDNA.ipynb.txt  Test_TetMesh.ipynb.txt  Test_TetMesh_Geodesics.ipynb.txt  Test_TriaMesh.ipynb.txt  Test_TriaMesh_Geodesics.ipynb.txt
dev/_static/: documentation_options.js
dev/_static/css/: style.css
dev/api/: index.html  lapy.meshes.html  lapy.modules.html  lapy.solver.html  logging.html
dev/changes/: index.html  latest.html
dev/tutorials/: index.html
dev/tutorials/examples/: Test_Plot.html  Test_Plot.ipynb  Test_ShapeDNA.html  Test_ShapeDNA.ipynb  Test_TetMesh.html  Test_TetMesh.ipynb  Test_TetMesh_Geodesics.html  Test_TetMesh_Geodesics.ipynb  Test_TriaMesh.html  Test_TriaMesh.ipynb  Test_TriaMesh_Geodesics.html  Test_TriaMesh_Geodesics.ipynb
doc/: conf.py  index.rst  links.inc  references.bib
doc/api/: index.rst  lapy.meshes.rst  lapy.modules.rst  lapy.solver.rst  logging.rst
doc/changes/: authors.inc  latest.rst
examples/: Test_Plot.ipynb  Test_ShapeDNA.ipynb  Test_TetMesh.ipynb  Test_TetMesh_Geodesics.ipynb  Test_TriaMesh.ipynb  Test_TriaMesh_Geodesics.ipynb  lapy
lapy/: Conformal.py  DiffGeo.py  FuncIO.py  Heat.py  Plot.py  ShapeDNA.py  Solver.py  TetIO.py  TetMesh.py  TriaIO.py  TriaMesh.py  __init__.py  _read_geometry.py  _tet_io.py  _tria_io.py  configuration.py  conformal.py  diff_geo.py  diffgeo.py  expected_outcomes.json  func_io.py  heat.py  io.py  plot.py  polygon.py  read_geometry.py  shape_dna.py  shapedna.py  solver.py  test_tet_mesh.py  tet_io.py  tet_mesh.py  tria_io.py  tria_mesh.py
lapy/utils/: __init__.py  _config.py  _imports.py
lapy/utils/tests/: expected_outcomes.json  test_TetMesh_Geodesics.py  test_TriaMesh_Geodesics.py  test_config.py  test_diffgeo.py  test_heat.py  test_imports.py  test_polygon.py  test_shape_DNA.py  test_solver.py  test_tet_mesh.py  test_tria_mesh.py  test_visualization_meshes.py
src/lapy/: Conformal.py  DiffGeo.py  FuncIO.py  Plot.py  ShapeDNA.py  Solver.py  TetIO.py  TetMesh.py  TriaIO.py  messages.py  read_geometry.py  utils.py
src/lapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tutorials/: 00_logging.py
