[metadata]
name = lapy
version = 0.3.0
author = Martin Reuter
author_email = martin.reuter@dzne.de
description = A package for differential geometry on meshes (Laplace, FEM)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords =
    Laplace
    FEM
    ShapeDNA
    BrainPrint
    Triangle Mesh
    Tetrahedra Mesh
    Geodesics in Heat
    Mean Curvature Flow
url = https://github.com/Deep-MI/LaPy
project_urls =
    Source = https://github.com/Deep-MI/LaPy
    Bug Reports = https://github.com/Deep-MI/LaPy/issues/
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4
include_package_data = True
install_requires =
    numpy
    scipy>0.10
    plotly

[options.extras_require]
dev =
    black
    flake8
    ipython
chol =
    scikit-sparse

[options.packages.find]
where = src



[flake8]
max-complexity = 10
exclude =
    __pycache__,
    .git,
    .pytest_cache,
    .tox,
    build,
    dist,
    tests,
    venv
per-file-ignores =
    */__init__.py: F401
    */messages.py: E501